# Task-Manager-Server

./: .gitignore  CMakeLists.txt  Dockerfile  compose.yaml  jwtRS256.key  jwtRS256.key.pub  main.cpp
.cache/clangd/index/: JWT_manager.cpp.F08E9A1F86968788.idx  JWT_manager.h.99736CAD67700934.idx  algorithm.hpp.88861200F0BA7D7F.idx  algorithm.ipp.88D1442CC4331065.idx  assertions.hpp.D548BB87A04D1422.idx  base64.hpp.21D2679029D1A2FE.idx  common.cpp.1732FBABF6A945D1.idx  common.h.DDBB221444596B0B.idx  config.cpp.837281A5A655E1C9.idx  config.h.73ECF7EA6C56B380.idx  config.hpp.E52F2EE3A59C432B.idx  consumer.cpp.9D39C54FAD54FB62.idx  consumer.h.E53EEA0FF333AFCF.idx  data_base_manager.cpp.7E9C10D0BD3670DB.idx  data_base_manager.h.00838BD63236750E.idx  error_codes.hpp.13A362C7BFC93444.idx  error_codes.ipp.1427F0EC0DBF6CA9.idx  exceptions.hpp.5EE0236534696A73.idx  file_parser.cpp.3FC214FD8098A846.idx  file_parser.h.8C85C71E2D2F0379.idx  http_connection.cpp.E93F79D57B2A7EA4.idx  http_connection.h.9934B59970E835A3.idx  invite.cpp.669C3C7627AD184E.idx  invite.h.6B0EE1A65ABDE1CA.idx  json.hpp.0A550B139062F32B.idx  jwt.hpp.8A75514E65264D54.idx  jwt.ipp.F724CC5088A50966.idx  main.cpp.0C6BB923D3C194AC.idx  message.cpp.245360FA718C6E44.idx  message.h.CA3C3AADD9890DEE.idx  meta.hpp.C5622F3CD8FB5621.idx  models.h.1147A061C0B24B2E.idx  parameters.hpp.8004D0A392D6F6CD.idx  producer.cpp.31E8C11D6B0D1636.idx  producer.cpp.CFD6009C62E3B165.idx  producer.h.A5AD7FC035BADC56.idx  producer.h.EE623A1122B9C47F.idx  profile.cpp.F3AF5D394CFB1CC9.idx  profile.h.B3FEB7F546D83AD2.idx  request_handler.cpp.8C32A5F7B5D62A21.idx  (+25 more)
include/: models.h  server.h  services.h
include/kafka/: common.h  producer.h
include/models/: config.h  invite.h  profile.h  room.h  status.h  task.h  timer.h
include/server/: http_connection.h  request_handler.h  server_status.h
include/services/: JWT_manager.h  data_base_manager.h  file_parser.h
include/services/kafka/: common.c  producer.h
models/Global Status/: global_status.cpp  global_status.h
models/Profile/: profile.cpp  profile.h
models/Room/: room.cpp  room.h
models/Task/: task.cpp  task.h
models/config/: config.cpp
models/global-status/: global_status.cpp  global_status.h
models/profile/: profile.cpp  profile.h
models/room/: room.cpp  room.h
models/task/: task.cpp  task.h
models/timer/: timer.cpp
server/connection/: http_connection.cpp  http_connection.h
server/request-handler/: request_handler.cpp  request_handler.h
services/Data Base/: CMakeLists.txt  data_base_manager.cpp  data_base_manager.h  main.cpp
services/JWT/: JWT_manager.cpp  JWT_manager.h
services/Request Handler/: request_handler.cpp  request_handler.h
services/Server Connection/: http_connection.cpp  http_connection.h
services/Text File Parser/: text_file_parser.cpp  text_file_parser.h
services/data-base/: CMakeLists.txt  data_base_manager.cpp  data_base_manager.h  main.cpp
services/file-parser/: file_parser.cpp  file_parser.h
src/: main.cpp
src/kafka/: common.cpp  producer.cpp
src/models/: config.cpp  invite.cpp  profile.cpp  room.cpp  status.cpp  task.cpp  timer.cpp
src/server/: http_connection.cpp  request_handler.cpp  server_status.cpp
src/services/: CMakeLists.txt  JWT_manager.cpp  data_base_manager.cpp  file_parser.cpp  main.cpp
src/services/kafka/: producer.cpp
